last for houcine

--- a/app/templates/admin_pages/base.html
+++ b/app/templates/admin_pages/base.html
@@ -9,8 +9,7 @@
     {% block css_block %}{% endblock css_block %}
 </head>
 <body>
-    {% comment %} <h1>C'est l'administration</h1> {% endcomment %}
-    <div class="container">
+    <div class="container-menu">
         <nav class="main-menu">
             <div class="logo">
                 <img src="{% static 'assets/travelMor-logo-black.png' %}" alt="LOGO TRAVEL MOR">
