--- a/app/templates/admin_pages/notifications_gestion.html
+++ b/app/templates/admin_pages/notifications_gestion.html
@@ -1,6 +1,7 @@
 {% extends 'admin_pages/base.html' %}
 {% block title %} Notifications {% endblock title %}
 {% block main %}
+<div class="container">
     <h1>administration ville</h1>
     <div>
         <table border = 1>
@@ -29,4 +30,5 @@
         {{ form.as_p }}
         <button type="submit">ajouter</button>
     </form>
+</div>
 {% endblock main %}
