--- a/app/templates/admin_pages/vols_gestion.html
+++ b/app/templates/admin_pages/vols_gestion.html
@@ -1,6 +1,7 @@
 {% extends 'admin_pages/base.html' %}
 {% block title %} Vols {% endblock title %}
 {% block main %}
+<div class="container">
     <h1>administration vols</h1>
     <div>
         <table border = 1>
@@ -32,4 +33,5 @@
         {{ form.as_p }}
         <button type="submit">ajouter</button>
     </form>
+</div>
 {% endblock main %}
