--- a/app/templates/visitor/special_asie_details.html
+++ b/app/templates/visitor/special_asie_details.html
@@ -3,6 +3,7 @@
 {% block url_4_class %}active{% endblock url_4_class %}
 {% block title %} voyage organise details - {{ id_voyage }} {% endblock title %}
 {% block block_css %}
+<link rel="stylesheet" href="{% static 'css/detailed_card.css' %}">
 <style>
     .container {
         background-color: rgb(255, 255, 255);
