--- a/app/templates/visitor/special_haj.html
+++ b/app/templates/visitor/special_haj.html
@@ -3,6 +3,7 @@
 {% block url_7_class %} active {% endblock url_7_class %}
 {% block title %} voyage-organise {% endblock title %}
 {% block block_css %}
+<link rel="stylesheet" href="{% static 'css/card.css' %}">
 <style>
     .mini-card-voyage .body {
         gap: 25px;
