--- a/app/templates/visitor/voyage_organise.html
+++ b/app/templates/visitor/voyage_organise.html
@@ -2,6 +2,9 @@
 {% load static %}
 {% block url_5_class %} active {% endblock url_5_class %}
 {% block title %} voyage-organise {% endblock title %}
+{% block block_css %}
+<link rel="stylesheet" href="{% static 'css/card.css' %}">
+{% endblock block_css %}
 {% block main %}
 
 <section class="second">
