--- a/app/static/admin_styles/base.css
+++ b/app/static/admin_styles/base.css
@@ -14,7 +14,7 @@ body {
     font-family: Poppins, sans-serif;
 }
 
-.container {
+.container-menu {
     display: flex;
 }
 
@@ -22,13 +22,35 @@ body {
     display: flex;
     flex-direction: column;
     width: 100%;
+    margin-left: 270px;
+}
+
+.inner-container .secondary-menu {
+    /* position: fixed;
+    top: 0; */
+    width: 100%;
+    height: auto;
+    z-index: 999;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 20px;
+    padding: 10px 20px;
+    /* border-bottom: 1px solid var(--main--green); */
+    /* background-color: #ebe8e8; */
+}
+
+.container {
+    padding: 20px;
+    background-color: #fffdfd;
+    min-height: 100vh;
 }
 
 
 
 /* admin main menu styles */
-.container .main-menu{
-    /* position: fixed; */  
+.container-menu .main-menu{
+    position: fixed;  
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -40,9 +62,7 @@ body {
 
 .main-menu .logo {
     margin-top: 10px;
-    /* border: 2px solid black; */
-    border-radius: 10px;
-    padding: 5px 10px   ;
+    padding: 5px 15px   ;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -66,14 +86,17 @@ body {
 
 .main-menu ul li {
     list-style-type: none;
-    background-color: black;
     width: 100%;
+    padding-bottom: 10px;
+    border-bottom: 1px solid gray;
 }
 
 .main-menu ul li a {
     text-decoration: none;
     cursor: pointer;
-    color: #fff;
+    color: #000;
+    font-size: 1.5rem;
+    font-weight: 600;
 }
 
 /* admin secondary menu styles */
