--- a/app/templates/visitor/promotions.html
+++ b/app/templates/visitor/promotions.html
@@ -3,6 +3,7 @@
 {% block url_8_class %} active {% endblock url_8_class %}
 {% block title %} promotions {% endblock title %}
 {% block block_css %}
+<link rel="stylesheet" href="{% static 'css/card.css' %}">
 <style>
     .mini-card-hotel .body {
         gap: 25px;
