--- a/app/static/admin_styles/base.css
+++ b/app/static/admin_styles/base.css
@@ -7,11 +7,28 @@
 }
 
 :root {
-    --main--green: #3DD6D0;
+    --full-background: rgba(243, 244, 247, 1);
+    --main-background: rgba(243, 244, 247, 1);
+    --color-after: #7366ff;
+    --back-after: #f1f0ff;
 }
 
 body {
     font-family: Poppins, sans-serif;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+table, th, td {
+    border: 1px solid black;
+    text-align: center;
+}
+
+table, th, td {
+    min-height: 40px;
 }
 
 .container-menu {
@@ -36,13 +53,11 @@ body {
     align-items: center;
     gap: 20px;
     padding: 10px 20px;
-    /* border-bottom: 1px solid var(--main--green); */
-    /* background-color: #ebe8e8; */
 }
 
 .container {
     padding: 20px;
-    background-color: #fffdfd;
+    background-color: var(--full-background);
     min-height: 100vh;
 }
 
@@ -55,17 +70,20 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 10px 20px;
-    background: linear-gradient(to right, var(--main--green), rgb(174, 250, 245));
-    width: fit-content;
+    padding: 10px 0;
+    width: 270px;
+    background-color: rgb(255, 255, 255);
 }
 
 .main-menu .logo {
-    margin-top: 10px;
-    padding: 5px 15px   ;
+    margin-block: 10px;
+    margin: auto;
+    padding: 5px 0;
     display: flex;
     align-items: center;
     justify-content: center;
+    width: fit-content;
+    position: relative;
 }
 
 .main-menu .logo img {
@@ -73,30 +91,52 @@ body {
     height: auto;
 }
 
+.main-menu .logo img i {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+
 .main-menu ul {
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: baseline;
     align-items: center;
     margin-top: 20px;
-    gap: 20px;
-    padding: 10px 20px;
+    padding: 10px 0;
     min-height: 100vh;
 }
 
 .main-menu ul li {
     list-style-type: none;
     width: 100%;
-    padding-bottom: 10px;
-    border-bottom: 1px solid gray;
+}
+
+.main-menu ul li:hover {
+    background-color: var(--back-after);
+}
+
+.main-menu ul li:hover a {
+    color: var(--color-after);
 }
 
 .main-menu ul li a {
+    display: inline-block;
     text-decoration: none;
     cursor: pointer;
-    color: #000;
-    font-size: 1.5rem;
+    color: rgb(117, 117, 137);
+    font-size: 1.3rem;
     font-weight: 600;
+    width: 100%;
+    height: 80px;
+    vertical-align: center;
+}
+
+.main-menu ul li a i {
+    display: inline-block;
+    margin-inline: 10px;
 }
 
 /* admin secondary menu styles */
