--- a/app/templates/admin_pages/commentaires_gestion.html
+++ b/app/templates/admin_pages/commentaires_gestion.html
@@ -8,7 +8,7 @@
             <input type="text" name="search" name="search">
             <input type="submit" value="filtrer">
         </form>
-        <table border = 1>
+        <table>
             <thead>
                 <tr>
                     <th> ID Commentaire </th>
