--- a/app/templates/admin_pages/dashboard.html
+++ b/app/templates/admin_pages/dashboard.html
@@ -33,7 +33,7 @@
     </div>
     <div>
     <h1> Liste des reservations</h1>
-    <table border = 1>
+    <table>
         <thead>
             <tr>
                 <th> Voyage ID </th>
