--- a/app/templates/admin_pages/promotions_gestion.html
+++ b/app/templates/admin_pages/promotions_gestion.html
@@ -4,7 +4,7 @@
 <div class="container">
     <h1>administration promotions</h1>
     <div>
-        <table border = 1>
+        <table>
             <thead>
                 <tr>
                     <th> ID Promotion </th>
