--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,6 +1,8 @@
-<!-- simple_form.html -->
-<form method="post" action="{% url 'simple_form' %}">
+<form method="post" action="{% url 'login' %}">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Submit">
+    {% if error_message %}
+    <p style="color: red;">{{ error_message }}</p>
+{% endif %}
 </form>
