--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -384,13 +384,13 @@
     {% block js_block %} {% endblock %} 
     <script src="{% static 'js/base.js' %}" type="text/javascript"></script>
     <script>
-        function toggleLike(heart) {
+        {% comment %} function toggleLike(heart) {
             if (heart.src.includes('{% static "assets/like-full.svg" %}')) {
                 heart.src = '{% static "assets/like-empty.svg" %}';
             } else {
                 heart.src = '{% static "assets/like-full.svg" %}';
             }
-        }
+        } {% endcomment %}
 
         // Open the full screen search box
         function openSearch() {
