--- a/app/templates/visitor/promotions.html
+++ b/app/templates/visitor/promotions.html
@@ -16,7 +16,13 @@
     {% if avoir_instance.id_voyage.id_promotion.pourcentage > 0 %}
     <div class="mini-card-voyage">
         <div class="image">
-            <img src="{% static 'assets/hotel.png' %}" alt="image-hotel">
+            {% for imageville in imagesville %} 
+                                {% if imageville.id_ville.id_ville == avoir_instance.id_ville.id_ville  %}
+                                <img src="{% static "assets/cities/"%}{{ imageville.id_images.path_image }}" alt="">
+                                    {{ "<!--" }}
+                                        {%endif%} 
+                                      {%endfor%}     
+                                      {{ "-->" }}
             <span class="reaction">
                 <img id="heart" src="{% static 'assets/like-empty.svg' %}" onclick="toggleLike(this)">
             </span>
